FIX: now header in mobile stay visible and change animation for desktop to translate instead opacity

--- a/css/styles.css
+++ b/css/styles.css
@@ -2454,7 +2454,7 @@
   background-color: white;
   z-index: 99;
   padding: 0.5rem;
-  transition: opacity 0.1s ease-in-out;
+  transition: transform 0.25s ease-in-out;
 }
 @media (min-width: 1000px) {
   .header {
