--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -5,7 +5,7 @@
     background-color: white;
     z-index: 99;
     padding: 0.5rem;
-    transition: opacity 0.1s ease-in-out;
+    transition: transform 0.25s ease-in-out;
 
     @media (min-width: 1000px) {
         display: flex;
